# ckb-vote-demo

./: .gitignore  Cargo.toml  Makefile  README.md
ckb-vote-test-tool/: .gitignore  Cargo.toml  README.md
ckb-vote-test-tool/src/: main.rs
contract-tests/: Cargo.toml
contract-tests/src/: tests.rs
contracts/ring-signature-verify/: Cargo.toml
contracts/ring-signature-verify/src/: main.rs  utils.rs
contracts/ring-signature-verify/src/tests/: mod.rs
frontend/: offckb.config.ts  package-lock.json  package.json
frontend/app/: ccc-client.ts  layout.tsx  page.tsx  utils.ts
frontend/app/pages/: PageConnectWallet.tsx  PageGenerateKeyPair.tsx  PageStartVote.tsx  PageUserVote.tsx
frontend/offckb/: my-scripts.json  system-scripts.json
rsa_ring_sign_linkable/: Cargo.toml
rsa_ring_sign_linkable/src/: lib.rs
rsa_ring_sign_linkable_wasm/: Cargo.toml
rsa_ring_sign_linkable_wasm/src/: lib.rs
rsa_tools/: Cargo.toml
rsa_tools_wasm/: Cargo.toml
rsa_tools_wasm/src/: lib.rs
signature-tools/: Cargo.toml
signature-tools-wasm/: Cargo.toml
signature-tools-wasm/src/: lib.rs
signature-tools/src/: candidate.rs  lib.rs
signature-tools/src/rsa_tools/: merkle_tree.rs  mod.rs
tests/: Cargo.toml
tests/src/: tests.rs
ticket-counting/: Cargo.toml
ticket-counting/src/: main.rs
vote-counting/: Cargo.toml
vote-counting/src/: main.rs
