[workspace]
resolver = "2"

members = [ "ckb-vote-test-tool",
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/ring-signature-verify",
  "contract-tests", "rsa_ring_sign_linkable", "rsa_tools_wasm",
]

[profile.release]
overflow-checks = true
strip = true
codegen-units = 1
opt-level = "s"
