[workspace]
resolver = "2"

members = [ "ckb-vote-test-tool",
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/ring-signature-verify",
  "contract-tests", "signature-tools", "signature-tools-wasm", "vote-counting"
]
[profile.release]
overflow-checks = false
strip = true
codegen-units = 1
opt-level = "s"
