[package]
name = "ckb-vote-test-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
ckb-sdk = "3.4.0"
ckb-types = "0.118.0"
clap = { version = "4.5.20", features = ["derive"] }
flexi_logger = "0.29.5"
jose-jwk = "0.1.2"
log = "0.4.22"
rand = "0.8.5"
rayon = "1.10.0"
rsa = "0.9.6"
serde_json = "1.0.132"
rsa_tools = { path = "../rsa_tools" }
