[package]
name = "rsa_ring_sign_linkable_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
rsa_ring_sign_linkable = { path = "../rsa_ring_sign_linkable" }
console_error_panic_hook = { version = "0.1.7" }
wasm-bindgen = "0.2.84"
web-sys = "0.3.72"
getrandom = { version = "0.2.15", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[lib]
crate-type = ["cdylib", "rlib"]
