[package]
name = "signature-tools-wasm"
version = "0.1.3"
edition = "2021"

[dependencies]
signature-tools = { path = "../signature-tools" }
console_error_panic_hook = { version = "0.1.7" }
wasm-bindgen = "0.2.84"
web-sys = "0.3.72"
getrandom = { version = "0.2.15", features = ["js"] }
rand = { version = "0.8.5", default-features = false }
rand_chacha = {version = "0.3.1",default-features = false}

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[lib]
crate-type = ["cdylib", "rlib"]
